--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2061,43 +2061,15 @@ SMART 1=========================================================================
 **/
 /**
 КАРУСЕЛЬ================================================================================================================================================================================
-Добавить класс .slider элементу .box__row
+
 **/
-.slick-slider {
-  position: relative;
-  height: 100%;
-  min-width: 0;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.slick-slider .slick-list {
+.container {
+  padding: 30px 10px;
   position: relative;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
 }
 
-.slick-slider .slick-track {
-  position: relative;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-}
-
-.slick-slider .slick-slide {
-  position: relative;
-  height: 100%;
-}
-
-.slick-slider .slick-arrow {
+.arrow {
   position: absolute;
   z-index: 100;
   top: 50%;
@@ -2107,98 +2079,101 @@ SMART 1=========================================================================
   background-color: #fff !important;
   border-radius: 4px;
   -webkit-transform: translate(0, -50%);
-      -ms-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
-.slick-slider .slick-arrow.slick-prev {
+.arrow.prev {
   left: -50px;
 }
 
-.slick-slider .slick-arrow.slick-prev::before {
+.arrow.prev::before {
   content: '';
-  width: 0;
-  height: 0;
+  position: relative;
+  top: 50%;
+  width: 12px;
+  height: 18px;
   border-style: solid;
   border-width: 9px 12px 9px 0;
   border-color: transparent #000 transparent transparent;
   margin: 0px 3px 0px 0px;
 }
 
-.slick-slider .slick-arrow.slick-next {
+.arrow.next {
   right: -50px;
 }
 
-.slick-slider .slick-arrow.slick-next::before {
+.arrow.next::before {
   content: '';
-  width: 0;
-  height: 0;
+  position: relative;
+  width: 12px;
+  height: 18px;
+  top: 50%;
   border-style: solid;
   border-width: 9px 0 9px 12px;
   border-color: transparent transparent transparent #000;
   margin: 0px 0px 0px 3px;
 }
 
-.slick-slider .slick-arrow.slick-disabled {
-  display: none !important;
-}
-
-.container {
-  padding: 30px 10px;
-  overflow: hidden;
-}
-
 .box__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-x: scroll;
   margin: 0 -8px;
   padding: 0px 10px 0px 0px;
 }
 
 @media (min-width: 1024px) {
-  .box__row:hover .slick-arrow.slick-prev {
+  .box__row:hover .arrow.prev {
     left: 40px;
   }
-  .box__row:hover .slick-arrow.slick-next {
+  .box__row:hover .arrow.next {
     right: 40px;
   }
 }
 
 @media (max-width: 1023px) {
-  .box__row .slick-arrow.slick-prev {
+  .box__row .arrow.prev {
     left: 35px;
   }
-  .box__row .slick-arrow.slick-next {
+  .box__row .arrow.next {
     right: 35px;
   }
 }
 
 @media (max-width: 599px) {
-  .box__row .slick-arrow.slick-prev {
+  .box__row .arrow.prev {
     left: 40px;
   }
-  .box__row .slick-arrow.slick-next {
+  .box__row .arrow.next {
     right: 40px;
   }
 }
 
 @media (max-width: 425px) {
-  .box__row .slick-arrow {
+  .box__row .arrow {
     display: none !important;
   }
-  .box__row .slick-arrow.slick-prev {
+  .box__row .arrow.prev {
     left: 15px;
   }
-  .box__row .slick-arrow.slick-next {
+  .box__row .arrow.next {
     right: 15px;
   }
 }
 
 .box__column {
   padding: 0 8px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
 }
 
 .item-box {
@@ -2206,6 +2181,7 @@ SMART 1=========================================================================
   display: block;
   border-radius: 4px;
   overflow: hidden;
+  min-width: 192px;
 }
 
 .item-box__image {
