Убрал стрелки в других шаблонах

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -152,6 +152,10 @@ body.lock {
 	max-width: 512px;
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -388,6 +392,10 @@ body.lock {
 	}
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -603,6 +611,10 @@ body.lock {
 	max-width: 1512.05px;
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -765,6 +777,10 @@ body.lock {
 	padding: 30px 10px;
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -915,6 +931,10 @@ body.lock {
 	}
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -1055,6 +1075,10 @@ body.lock {
 	}
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -1187,6 +1211,10 @@ body.lock {
 .container {
 	padding: 30px 10px;
 	max-width: 1536.02px;
+}
+
+.arrow {
+	display: none;
 }
 
 .box {
@@ -1326,6 +1354,10 @@ body.lock {
 .container {
 	padding: 30px 10px;
 	max-width: 1536.05px;
+}
+
+.arrow {
+	display: none;
 }
 
 .box {
@@ -1519,6 +1551,10 @@ body.lock {
 	max-width: 1542.02px;
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 	&__row {
 		display: flex;
@@ -1681,6 +1717,9 @@ body.lock {
 	max-width: 100%;
 	padding: 0 10px;
 }
+.arrow {
+	display: none;
+}
 .item-box {
 	min-width: 100%;
 
@@ -1812,6 +1851,10 @@ SMART 1=========================================================================
 	max-width: 936.02px;
 }
 
+.arrow {
+	display: none;
+}
+
 .box {
 
 	&__row {
@@ -1927,9 +1970,9 @@ SMART 1=========================================================================
 		}
 	}
 
- &__btn {
+	&__btn {
 		display: none;
- }
+	}
 
 	&__else {
 		display: none;
@@ -1943,25 +1986,25 @@ SMART 1=========================================================================
 		display: none;
 	}
 
-&__title {
-	display: none;
-}
-
-&__subtitle {
-	display: none;
-}
-
- &__bottom {
- 	display: none;
+	&__title {
+		display: none;
 	}
 
-&__date {
-	display: none;
-}
+	&__subtitle {
+		display: none;
+	}
 
-&__menu {
-	display: none;
-}
+	&__bottom {
+		display: none;
+		}
+
+	&__date {
+		display: none;
+	}
+
+	&__menu {
+		display: none;
+	}
 
 	&__icon {
 		display: none;
@@ -2061,7 +2104,6 @@ SMART 1=========================================================================
 **/
 /**
 КАРУСЕЛЬ================================================================================================================================================================================
-
 **/
 .container {
   padding: 30px 10px;
